--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,9 @@
         <li>
           <a href="https://plus.google.com/113145550201032375194/posts">plus</a>
         </li>
+        <li>
+          <a href="http://www.goodreads.com/user/show/2537595-matthew">goodreads</a>
+        </li>
       </ul>
     </div>
 
