Add a few more things

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,29 @@
 <html>
 
 <head>
-  <title>Fourpool</title>
+  <title>matt</title>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <style>
+    body {
+      font-family: 'Open Sans', sans-serif;
+    }
+  </style>
 </head>
 
 <body>
   <h1>Matthew Michihara</h1>
+
   <img src="http://www.gravatar.com/avatar/54845d64a4146d48732fdde77e50f0e2?s=200" />
+
+  <p>Engineer at
+    <del><a href="https://www.microsoft.com">Microsoft</a></del>
+    <del><a href="https://www.lookout.com">Lookout</a></del>
+    <a href="https://www.foursquare.com">Foursquare</a>.
+  </p>
+
+  <a href="mailto:matthew.michihara@gmail.com">matthew.michihara@gmail.com</a>
+  <br />
+
   <a class="twitter-follow-button" href="https://twitter.com/mattmichihara" data-show-count="false">Follow @mattmichihara</a>
   <script>
     window.twttr = (function(d, s, id) {
@@ -28,7 +45,7 @@
     }(document, "script", "twitter-wjs"));
   </script>
 
-  <a href="https://foursquare.com/user/1478754" class="fourSq-widget" data-type="follow" data-fuid="1478754">Follow me on Foursquare</a>
+  <a href="https://foursquare.com/user/1478754" class="fourSq-widget" data-type="follow" data-fuid="1478754">Follow mattmichihara</a>
   <script type='text/javascript'>
     (function() {
       window.___fourSq = {};
@@ -41,15 +58,6 @@
     })();
   </script>
 
-  <p>Engineer at
-    <del><a href="https://www.microsoft.com">Microsoft</a></del>
-    <del><a href="https://www.lookout.com">Lookout</a></del>
-    <a href="https://www.foursquare.com">Foursquare</a>.
-  </p>
-  </div>
-
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
-  <script src="js/bootstrap.min.js"></script>
   <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-8350614-2']);
